# go-scale

./: .gitignore  .golangci.yml  Makefile  README.md  codec_test.go  decoder.go  decoder_test.go  encoder.go  encoder_test.go  generate.go  generate_test.go  go.mod  go.sum  tag.go  tag_test.go  types.go  types_test.go  unsafe.go  unsafe_test.go
compat/: compat.go  compat_scale.go  compat_test.go
compat/rust/: .gitignore  Cargo.toml  build.rs
compat/rust/src/: lib.rs
examples/: bytes.go  bytes_scale.go  bytes_test.go  compact.go  compact_scale.go  ex1.go  ex1_scale.go  ex2.go  ex2_scale.go  ex2_test.go  imported.go  imported_scale.go  integers.go  integers_scale.go  integers_test.go  nested_struct_array_no_import.go  nested_struct_array_no_import_scale.go  nested_struct_array_no_import_test.go  nested_struct_no_import.go  nested_struct_no_import_scale.go  nested_struct_no_import_test.go  nested_struct_pointer_with_import.go  nested_struct_pointer_with_import_scale.go  nested_struct_pointer_with_import_test.go  nested_struct_slice_with_import.go  nested_struct_slice_with_import_scale.go  nested_struct_slice_with_import_test.go  nested_type_alias_with_import.go  nested_type_alias_with_import_scale.go  nonlocal.go  nonlocal_scale.go  nonlocal_test.go  options.go  options_scale.go  options_test.go  spend.go  spend_scale.go  spend_test.go  string.go  string_scale.go  (+1 more)
scalegen/: Makefile  go.mod  go.sum  main.go
test/: decoder_test.go  encoder_test.go  types.go  types_scale.go
tester/: fuzz.go  golden.go
transactions/: transactions.go  transactions_test.go
(+33 files in other folders)
