[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "compat"
crate_type = ["staticlib"]

[dependencies]
parity-scale-codec = { version = "3.4.0", "features" = ["derive"] }

[build-dependencies]
cbindgen = "*"